--- a/src/Components/ContactUs/ContactUs.module.css
+++ b/src/Components/ContactUs/ContactUs.module.css
@@ -239,7 +239,7 @@
         flex-direction: column;
        align-items: center  ;
         width: 97vw;
-    /* height: 1400px; */
+    height: 1170px;
         gap: 20px;
     } 
     .address_contact{
@@ -248,7 +248,7 @@
     .content1_contact{
       
         width: 90%;
-      
+      height: 50%;
         position: relative;
     }   
 
@@ -260,7 +260,8 @@
     
     .lady_contact{
         position: absolute;
-       right: 10px;
+       /* right: -20px; */
+       left: 80px;
        bottom: -30px;
       width: 170px;
       height: 220px;
