--- a/src/Components/FAQ/FAQchild.module.css
+++ b/src/Components/FAQ/FAQchild.module.css
@@ -20,7 +20,7 @@
   .ques_faq {
     display: flex;
     justify-content: space-between;
-    
+    padding-right:10px ;
     cursor: pointer;
   }
   
@@ -30,7 +30,7 @@
    
   }
   .border2_faq {
-    width: 105%;
+    width: 102%;
     padding-top: 20px;
     border-bottom: 1px solid #c2c2c2;
     
