--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -30,13 +30,14 @@
 
 .btn_home {
     background-color: #FF7D29;
-    border-radius: 5px;
-    font-weight: bold;
-    color: white;
-    border: #FF7D29;
-    width: 150px;
-    height: 40px;
-    box-shadow: 0 4px rgba(56, 52, 52, 0.391) inset;
+  border-radius: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  color: white;
+ border:  #1F3255;
+ width: 150px;
+ height: 40px;
+ box-shadow:0 4px 4px 0 #0000003d ;
 }
 
 .content2_home {
