--- a/src/Components/StartProject/Component/GenEnquiry/GenEnquiry.module.css
+++ b/src/Components/StartProject/Component/GenEnquiry/GenEnquiry.module.css
@@ -92,7 +92,18 @@ padding: 30px;
 
 
 .btn_general{
+
     background-color: #FF7D29;
+    border-radius: 10px;
+    font-weight: bold;
+    color: white;
+   border:  #1F3255;
+   width: 150px;
+   height: 40px;
+   box-shadow:0 4px 4px 0 #0000003d ;
+
+
+    /* background-color: #FF7D29;
    border-radius: 16px;
    font-weight: bold;
    color: white;
@@ -100,7 +111,7 @@ padding: 30px;
   width: 150px;
   height: 40px;
   box-shadow:0 4px rgba(56, 52, 52, 0.331) inset ;
-  
+   */
 }
 
 @media screen and (max-width:664px) {
