--- a/src/Components/StartProject/Component/JobEnquiry/JobEnquiry.module.css
+++ b/src/Components/StartProject/Component/JobEnquiry/JobEnquiry.module.css
@@ -126,7 +126,18 @@ visibility: hidden;
     }
 
 .btn_job{
+
     background-color: #FF7D29;
+    border-radius: 10px;
+    font-weight: bold;
+    color: white;
+   border:  #1F3255;
+   width: 150px;
+   height: 40px;
+   box-shadow:0 4px 4px 0 #0000003d ;
+
+
+    /* background-color: #FF7D29;
    border-radius: 16px;
    font-weight: bold;
    color: white;
@@ -134,7 +145,7 @@ visibility: hidden;
   width: 180px;
   height: 40px;
   box-shadow:0 4px rgba(56, 52, 52, 0.331) inset ;
-  
+   */
 }
 @media screen and (max-width:654px) {
     .formbox1_job{
