--- a/src/Components/Testimonial/Review/Review.module.css
+++ b/src/Components/Testimonial/Review/Review.module.css
@@ -11,6 +11,7 @@
     width: 321px;
     height: 350px;
     display: flex;
+    margin-top: 40px;
     align-items: center;
     flex-direction: column;
     border-radius: 10px;
