--- a/src/Components/Testimonial/Testimonial.module.css
+++ b/src/Components/Testimonial/Testimonial.module.css
@@ -1,6 +1,7 @@
 .main_container {
     /* border: 2px dashed red; */
     height: 450px;
+    width: 98vw;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -11,6 +12,7 @@
 }
 .review {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
     width: 98vw;
 }
