--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -177,7 +177,7 @@
       }
       
       .container_navbar{
-        width: 98vw;
+        width: 100%;
       }
       .logo_navbar {
         width: 130px;
