--- a/src/Components/caroursel/Services/Component/Process/Process.module.css
+++ b/src/Components/caroursel/Services/Component/Process/Process.module.css
@@ -1,6 +1,7 @@
 .process__main_box {
     padding: 30px;
     width: auto;
+    /* border: 1px solid red; */
 }
 .process__top {
     display: flex;
