--- a/src/Components/Career/Career.module.css
+++ b/src/Components/Career/Career.module.css
@@ -1,5 +1,8 @@
 .container_career{
     display: flex;
     flex-direction: column;
-    margin-top: 160px;
+    gap: 50px;
+    margin-top: 120px;
+    width: 100%;
+    height: 100%;
 }
