--- a/src/Components/Career/Components2/Employeebenefit/Employeebenefit.module.css
+++ b/src/Components/Career/Components2/Employeebenefit/Employeebenefit.module.css
@@ -1,11 +1,12 @@
 .container_benefits{
-    width: 97vw;
-    height: 550px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    gap: 40px;
     align-items: center;
-    /* justify-content: space-evenly; */
-    margin: 50px auto;
+    justify-content: center;
+    /* margin: 50px auto; */
     /* gap: 50px; */
 }
 .heading_benefits{
@@ -28,18 +29,18 @@ border-radius: 90px;
 .cards_benefit{
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
-    height: 60%;
-    width: 95%;
+    justify-content: center;
+    height: 100%;
+    width: 1080px;
     /* border: 2px solid black; */
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 60px;
     margin: auto;
 }
 .card_benefit{
     display: flex;
-    height: 150px;
-    width: 600px;
+    height: 100%;
+    width: 500px;
     gap: 20px;
 
     /* align-items: flex-start; */
@@ -50,25 +51,35 @@ border-radius: 90px;
     gap: 15px;
 
 }
-@media screen and (max-width:1322px) {
+/* @media screen and (max-width:1322px) {
     .container_benefits{
         height: 875px;
     }
-}
-@media screen and (max-width:612px) {
-    .container_benefits{
-        height: 875px;
-    }
-}
-@media screen and (max-width:442px) {
-    .container_benefits{
-        height: 870px;
-        
+} */
+@media screen and (max-width:1016px) {
+    /* .container_benefits{
+        /* height: 875px; */
+        /* width: 100%;
+    }  */
+    .cards_benefit{
+width: 75%;
+gap: 30px;
+/* justify-content: space-around; */
+margin: 0;
     }
 
+}
+@media screen and (max-width:442px) {
+    /* .container_benefits{
+        height: 870px;
+        
+    } */
+
     .cards_benefit{
-        gap: 0px;
-        height: 80%;
+        gap: 30px;
+        width: 90%;
+        margin: 0;
+
     }
 
 
