--- a/src/Components/Career/Components2/Hiring/Hiring.module.css
+++ b/src/Components/Career/Components2/Hiring/Hiring.module.css
@@ -1,10 +1,10 @@
 .container_benefits{
-    width: 97vw;
-    height: 550px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: space-evenly; */
+    justify-content: center;
     margin:auto;
     gap: 50px;
     /* background-color: aqua; */
@@ -29,17 +29,25 @@ border-radius: 90px;
 .result_benefits{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 300px;
+    height: 100%;
+    /* border: firebrick solid 2px; */
     /* justify-content: space-between; */
     gap: 40px;
-margin: 30px 30px;
+/* margin: 30px 30px; */
+margin: auto;
+
     
 }
 .content_benefits{
     display: flex;
-    width: 94%;
-    gap: 30px;
-    /* margin: auto; */
+    width: 100%;
+    align-items: center;
+    /* justify-content: space-between; */
+    /* gap: 20px; */
+    /* border: #F58634 solid 2px; */
+    margin: auto;
+    padding-left: 50px;
 }
 .contentheading_benefits{
     font-size: 16px;
@@ -54,31 +62,33 @@ margin: 30px 30px;
 }
 .box_benefits{
     position: relative;
-  
-    right: 40px;
+  /* border: rebeccapurple solid 2px; */
+    right: 30px;
   display: flex;
+width: 100%;
   flex-direction: column;
   justify-content: space-evenly; 
   height: 200px; 
 }   
-@media screen and  (max-width:910px) 
+@media screen and  (max-width:1016px) 
 {
 
-    .container_benefits{
+    /* .container_benefits{
        
-        height: 1250px;}
+        height: 1250px;} */
 
     .content_benefits{
         flex-direction: column;
         align-items: center ;
-        width: 400px;
+        width: 100%;
+        flex-wrap: wrap;
         /* background-color: blue; */
     } 
    
     .result_benefits{
       
-  margin: 0;
-     padding-left: 80px;   
+  /* margin: 0;
+     padding-left: 80px;    */
     }
 
 }
