--- a/src/Components/Career/Components2/Ourvalues/Ourvalues.module.css
+++ b/src/Components/Career/Components2/Ourvalues/Ourvalues.module.css
@@ -1,6 +1,6 @@
 .container_ourvalues{
-    width: 97vw;
-    height: 780px;
+    width: 100%;
+    height: 100%;
     display: flex;
     /* background-color: #F58634; */
     flex-direction: column;
@@ -31,14 +31,15 @@ border-radius: 90px;
 .cards_ourvalues{
     display: flex;
     flex-wrap: wrap;
-    width: 65%;
-    height: 600px;
+
+    width: 900px;
+    height: 100%;
     /* border: 2px solid black; */
-    margin: 0 auto;
+    /* margin: 0 auto; */
     
-    gap: 30px;
-    align-items: center;
-    /* justify-content: space-between; */
+    gap: 50px;
+    /* align-items: center; */
+    /* justify-content: center; */
 
 }
 .card_ourvalues{
@@ -73,16 +74,21 @@ padding-bottom: 15px;
 }
 
 
-@media screen and (max-width:1254px) {
-    .container_ourvalues{
+@media screen and (max-width:1016px) {
+    /* .container_ourvalues{
         height: 1080px;
+    } */
+    .cards_ourvalues{
+        width: 80%;
+        height: 100%;
     }
+
 }
-@media screen and (max-width:404px) {
-    .container_ourvalues{
+/* @media screen and (max-width:404px) {
+    /* .container_ourvalues{
         height: 1230px;
     }
     .card_ourvalues{
         height: 250px;
-    }
-}
+    } */
+/* } */
