--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,17 +1,20 @@
 .container_footer{
     display: flex;
-    width: 97vw;
-    height: 80vh;
+    width: 100%;
+    height: 70vh;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin: 0 auto;
+    margin: auto;
 }
 .box_footer{
     display: flex;
     justify-content: space-around;
-    width:97vw ;
+    width:97vw;
     margin: 0 auto;
+}
+.copyright_footer{
+    padding-left: 80px;
 }
 @media screen and (max-width:670px) {
     .container_footer{
@@ -27,5 +30,7 @@
         padding-left: 20px;
         gap: 20px;
     }
-    
+    .copyright_footer{
+        padding-left: 20px;
+    }
 }
