--- a/src/Components/Home/Graph/Totalproject/Totalproject.module.css
+++ b/src/Components/Home/Graph/Totalproject/Totalproject.module.css
@@ -1,22 +1,32 @@
-.main_div {
+.totalprojects__main_div {
     height: 115px;
     width: 130px;
     display: flex;
     align-items: center;
     margin: 100px auto;
     flex-direction: column;
-    box-shadow: inset 3px 6px 5px 4px #ccc;
+    box-shadow: inset 3px 2px 3px 3px #ccc;
     border-radius: 8px;
-    line-height: 0;
-    gap: 1px;
+    gap: 10px;
   
   }
-  .heading{
+  .totalprojects__graphimg {
+    width: 75px;
+    height: 38px;
+    margin-right: 3px;
+  }
+  .totalprojects__heading{
       font-size: 12px;
       font-weight: 300;
       margin-top: 10px;
   }
-  .number {
-     margin-top: -12px;
+  .totalprojects__number {
+     margin-top: -13px;
      font-size: 12px;
   }
+  .totalprojects__text{
+    font-size: 13px;
+    margin-top: 5px;
+  }
+  
+  
