--- a/src/Components/caroursel/Services/Component/Itstaff/Itstaff.module.css
+++ b/src/Components/caroursel/Services/Component/Itstaff/Itstaff.module.css
@@ -1,11 +1,12 @@
 .container_staff{
-    width: 97vw;
-    height:800px;
+    width: 100%;
+    height:790px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
-    margin: 130px auto;
+    gap: 30px;
+    /* border: 1px solid greenyellow; */
+    /* margin: 130px auto; */
 }
 .heading_staff{
     display: flex;
@@ -24,15 +25,34 @@
     border-radius: 90px;
 }
 .box_card{
-    width: 90%;
+    /* border: 1px solid black; */
+    /* width: 90%; */
+    width:1150px ;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
-    gap: 20px;
+    gap: 30px;
+    justify-content: center;
 }
-@media screen and (max-width:1282px) {
+@media screen and (max-width:1149px) {
     .container_staff{
-        height: 1200px;
+        height: 100%;
+   
+    }
+    .box_card{
+       width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+       justify-content: center;
+    } 
+
+}
+
+/* @media screen and (max-width:826px) {
+    .container_staff{
+        height:100% 
+    
     }
     .box_card{
        
@@ -42,18 +62,4 @@
        justify-content: space-around;
     } 
 
-}
-
-@media screen and (max-width:736px) {
-    .container_staff{
-        height: 2200px;
-    }
-    .box_card{
-       
-        display: flex;
-        flex-wrap: wrap;
-        text-align: center;
-       justify-content: space-around;
-    } 
-
-}
+} */
