--- a/src/Components/caroursel/Services/Component/Optimizing/Optimizing.module.css
+++ b/src/Components/caroursel/Services/Component/Optimizing/Optimizing.module.css
@@ -1,10 +1,14 @@
 
 
 .optimizing__container {
-    padding: 100px;
+   
     display: flex;
-    justify-content: space-around;
-    padding: 50px 96px;
+    gap: 0px;
+    /* border: 1px solid green; */
+    /* align-items: center; */
+    justify-content: space-evenly;
+    /* padding: 50px 96px; */
+    /* padding: 30px 50px; */
    
 }
 .optimizing__left {
@@ -26,7 +30,7 @@ margin-top: -4px;
 }
 .optimizing__right {
     width: 42%;
-    text-align: justify;
+    text-align: left;
     font-weight: 400;
 
 }
