--- a/src/Components/caroursel/Services/Component/Ourservices/Ourservices.module.css
+++ b/src/Components/caroursel/Services/Component/Ourservices/Ourservices.module.css
@@ -1,7 +1,8 @@
 .ourservices__main_box {
     height: 500px;
     padding: 0px 50px;
-    margin-top: 100px;
+    /* margin-top: 180px; */
+    /* border: 1px solid pink; */
 }
 .ourservices__heading {
     text-align: left;
