--- a/src/Components/caroursel/Services/Services.module.css
+++ b/src/Components/caroursel/Services/Services.module.css
@@ -1,8 +1,15 @@
 .component_service{
     display: flex;
     flex-direction: column;
-   height: 3500px;
+   height: 100%;
+   gap: 50px;
    /* border: 1px solid red; */
-   justify-content: space-evenly;
-margin-top: 100px;
+   /* justify-content: space-evenly; */
+margin-top: 120px;
 }
+/* @media screen and (max-width:1246px) {
+    .component_service{
+        height: 100%;
+    } */
+    
+/* } */
