--- a/src/Components/AboutUs/AboutUs.module.css
+++ b/src/Components/AboutUs/AboutUs.module.css
@@ -1,8 +1,12 @@
+
+
+
 .container_aboutus{
     display: flex;
     align-items: center;
-    width: 97vw;
+    width: 100%;
     height: 667px;
+    /* border: #12005A 1px solid; */
     /* margin-top: 130px; */
     /* margin: auto; */
 }
@@ -24,7 +28,7 @@
     justify-content: space-around;
     align-items: center;
     /* margin-left: 20px; */
-    width: 50%;
+    width: 48%;
     height: 50%;
     /* padding: auto; */
 }
@@ -80,6 +84,7 @@
     border-radius: 3px;
     font-size: 16px;
     margin-top: 80px;
+    cursor: pointer;
 }
 @media screen and (max-width:1185px) {
     .container_aboutus{
