--- a/src/Components/AboutUs/AboutUsPage/AboutUsPage.module.css
+++ b/src/Components/AboutUs/AboutUsPage/AboutUsPage.module.css
@@ -1,5 +1,7 @@
 .container_aboutuspage{
     display: flex;
     flex-direction: column;
+    height: 100%;
+    width: 100%;
     margin: 130px auto;
 }
