--- a/src/Components/AboutUs/AboutUsPage/Component/Driving/Driving.module.css
+++ b/src/Components/AboutUs/AboutUsPage/Component/Driving/Driving.module.css
@@ -16,7 +16,8 @@
 .driving__text_box {
     color: #000000;
     font-weight: 400;
-    margin-top: -25px;
+    margin-top: -15px;
+    /* margin-top: -25px; */
     text-align: center;
 }
 
@@ -27,7 +28,7 @@
     background-color: white;
     font-weight: 700;
     color: #25679C;
-    
+    cursor: pointer;
 }
 
 @media screen and (max-width:645px) {
