--- a/src/Components/AboutUs/AboutUsPage/Component/Team/Team.module.css
+++ b/src/Components/AboutUs/AboutUsPage/Component/Team/Team.module.css
@@ -1,25 +1,31 @@
 .team__main_box {
     width: 90%;
-    height: 350px;
+    height: 520px;
     display: flex;
     justify-content:space-between;
     align-items: center;
     padding: 0px 25px;
-    margin-bottom: 200px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 
-    margin-top: 100px;
+    /* border: 1px solid green; */
+    overflow:hidden;
+    /* display: none; */
 }
-.team__heading {
+.team_respo_body {
+    display: none;
+}
+/* .team__heading {
     color: #F58634;
-    font-size: 17px;
+    font-size: 20px;
     text-align: center;
     margin-left: 20%;
     margin-top: 55px;
-}
+} */
 
 
 .team__left_heading {
-    font-size: 180%;
+    font-size: 240%;
 }
 
 .team__child_box {
@@ -27,7 +33,6 @@
     width: 87%;
     justify-content: space-around;
     align-items: center;
-
     margin-left: 90px;
 }
 .team__left {
@@ -36,26 +41,40 @@
     align-items: center;
     flex-direction: column;
     margin-top: -100px;
+    margin-left: 50px;
 }
 .team__lines {
     border-radius: 10px;
-    width: 135px;
+    width: 140px;
     height: 0px;
     border: 1.5px solid #F58634;
+    margin-top: 10px;
 }
 
 .team__right {
-    height: 390px;
     width: 250px;
+    height: 100%;
+    overflow:visible;
+    position:relative;
+    margin-top: 100px;
 }
 
 .team__column {
+     /* border: 1px solid red; 
+      overflow:visible;   */
+
     width: 400px;
     display: flex;
     flex-wrap: wrap;
     gap: 55px;
-    margin-top:-30px;
-    animation: slide 10s linear infinite;
+    margin-top: -10px;
+    animation: slide 15s linear infinite;
+    animation-delay: 2s;
+    animation-timing-function: ease-out;
+
+    position: absolute;
+    top: -230px;
+    will-change: transform;
 }
 .team__box {
     display: flex;
@@ -64,7 +83,8 @@
     box-shadow: 0px 2px 2px -1px gray;
     border-radius: 8px;
 }
-.team__photo img {
+
+ .team__bigimg {
     width: 150px;
     height: 130px;
     border-radius: 5px;
@@ -77,7 +97,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 130px;
+    margin-top: -5px;
     gap: 10px;
     padding: 10px;
 }
@@ -94,13 +114,13 @@
 
 
   }
-  @keyframes side {
-    10% {
+  @keyframes slide {
+
+    0% {
         transform: translateY(0);
     }
-    100%{
-        transform: translateY(-100%);
-
+    100% {
+        transform: translateY(-50%);
     }
     
 }
@@ -121,16 +141,86 @@
     
 } 
 .team__right .team__box:nth-child(1)::before {
-    content: "Our Tech Experts";
+    content: "Our Tech Experts     ";
     text-align: center;
     color: #F58634;
     font-size: 18px;
     font-weight: 600;
     margin-top: -25px;
+    margin-bottom: 10px;
     
+}   
+.team__right .team__box:nth-child(2) {
+    margin-top: auto;
 }   
 .team_respo_box {
     display: none;
+}
+
+
+.team__column::after {
+    content: '';
+    display: block;
+    height: 65vh;
+    transform: translateY(100%);
+}
+@media screen and (max-width: 1000px) {
+    .team__main_box {
+        width: 85%;
+        padding: 0px 110px;
+    }
+    .team__left {
+        margin-left: 0px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .team__main_box {
+        width: 83%;
+        padding: 0px 110px;
+    }
+    .team__left {
+        margin-left: -50px;
+    }
+    .team__left_heading {
+    font-size: 25px;
+    }
+    .team__lines {
+        width: 95px;
+        margin-top: 8px;
+    }
+}
+
+@media screen and (max-width: 780px) {
+    .team__main_box {
+        width: 88%;
+    }
+    .team__child_box {
+        width: 70%;
+        margin-left: 75px;
+    }
+    .team__left_heading {
+        font-size: 22px;
+        width: max-content;
+    }
+    .team__lines {
+        width: 70px;
+    }
+    .team__column {
+        width: 350px;
+        gap: 40px;
+    }
+    .team__bigimg {
+        width: 149px;
+        height: 115px;
+    }
+    .team__about {
+        width: 149px;
+    }
+    .team__left {
+        margin-left: -70px;
+        margin-right: 10px;
+    }
 }
 
 
@@ -142,62 +232,68 @@
 
 
 
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 650px) {
     .team__main_box {
         display: none;
     }
-    .team_respo_box {
+    .team_respo_body {
+        /* min-height: 100vh; */
         display: flex;
         flex-direction: column;
-        height: 100vh;
-        width: 100vw;
-        gap: 20px;
+    }
+    .team_respo_container {
+        height: 350px;
+        margin: auto;
+        position: relative;
+        width: 85%;
+        display: flex;
+        overflow: hidden;
+   
+    }
+    .team_respo_slide_container {
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
+        /* width: calc(250px * 5); */
+        animation: scroll 20s linear infinite;
+    }
+    @keyframes scroll {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(calc(-250px * 10));
+        }
+    }
+    .team_respo_slide_image {
+        height: 250px;
+        width: 250px;
+        display: flex;
+        align-items: center;
+        padding: 15px;
+    }
+    .team_respo_image {
+        width: 100%;
+        border-radius: 5px;
+    }
+    .team_respo_about {
+        background-color: #FFF3F3;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border-radius: 5px;
+        margin-top: -23px;
+        width: 220px;
+        margin-left: 15px;
+        padding: 5px 0px;
     }
     .team_respo_mainheading {
         color: #F58634;
         font-size: 180%;
         display: flex;
         justify-content: center;
-    }
-    .team_respo_slider {
-        height: 100%;
-        width: 440%;
-        display: flex;
-        gap: 1%;
-        justify-content: center;
-        animation: 20s hslide infinite linear;
-
+        padding-top: 20px;
     }
 
-
-    .team_respo_photo {
-        height: 250px;
-        width: 250px;
-    }
-    .team_respo_photo  {
-        height: 250px;
-        width: 250px;
-        border-radius: 13px;
-    }
-    .team_respo_about {
-        width: 100%;
-        height: 20%;
-        background-color: #FFF3F3;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        margin-top: -10px;
-        border-radius: 10px;
-
-    }
-
-    @keyframes hslide {
-        from {
-            transform: translateX(0);
-        }
-        to {
-            transform: translateX(-100%);
-        }
-    }
 }
