--- a/src/Components/Career/Components2/CareerArea/CareerArea.module.css
+++ b/src/Components/Career/Components2/CareerArea/CareerArea.module.css
@@ -1,3 +1,6 @@
+.mySwiper .swiper-pagination-bullet-active{
+    background: #F58634;
+}
 .container_career{
     width: 100%;
     height: 100%;
@@ -6,6 +9,7 @@
     align-items: center;
     /* justify-content: space-around; */
     margin:auto;
+    
     gap: 80px;
     /* border: #F58634 1px solid; */
 }
@@ -36,12 +40,18 @@
    gap: 10px;
     
 }
-.team_career{
-height: 166px;
-}
 .laptop_career{
-width: 550px;
+    width: 548px;
+    object-fit: initial;
+    height: 320px;
+   
+    }
+.team_career{
+height: 162px;
+width: 100%;
+object-fit: initial;
 }
+
 .screen_career{
 height: 355px;
 width: 260px;
@@ -55,4 +65,97 @@ box-shadow: none;
     flex-wrap: wrap;
     gap: 20px;
     
+}
+
+
+.reponsiveslider_career{
+   display: none;
+
+}
+.pagination_swiper
+{
+    
+    
+  height: 50px;
+}
+
+@media screen and (max-width:1120px) {
+    
+    .slide_card{
+        padding-left: 20px;
+    }
+.laptop_career{
+    width: 100vw;
+    height:60%;
+     position: relative;
+     overflow: hidden;
+     object-fit: inherit;
+    }
+
+.reponsiveslider_career{
+    max-width: 1120px;
+    /* width: 100%; */
+    height: 700px;
+    display: flex;
+    /* flex-direction: column; */
+    position: relative;
+    /* border: #F58634 2px solid; */
+    
+    
+}
+.slidercontainer_career{
+    /* border: #8024aa 2px solid; */
+width: 90%;
+height: 50%;
+/* padding-left: 20px; */
+position: absolute;
+z-index: 2;
+bottom: 15%;
+right: 0;
+ 
+}
+
+.container_career{
+display: none;
+}
+
+
+
+
+}
+
+@media screen and (max-width:600px) {
+    
+
+.laptop_career{
+  width: 100vw;
+    height:60%;
+     position: relative;
+     overflow: hidden;
+     object-fit: inherit
+   
+  
+}
+.reponsiveslider_career{
+    width: 100vw;
+    height: 600px;
+    display: flex;
+    /* flex-direction: column; */
+    position: relative;
+    /* border: #F58634 2px solid; */
+
+
+}
+.slidercontainer_career{
+width: 90%;
+height: 55%;
+position: absolute;
+z-index: 2;
+bottom: 10%;
+right: 0;
+
+}
+.container_career{
+display: none;
+}
 }
