--- a/src/Components/Career/Components2/Ourvalues/Ourvalues.module.css
+++ b/src/Components/Career/Components2/Ourvalues/Ourvalues.module.css
@@ -10,6 +10,10 @@
     margin: auto;
     
 }
+.responsivecontainer_ourvalues{
+    display: none;
+    
+}
 .heading_ourvalues{
     display: flex;
     flex-direction: column;
@@ -75,9 +79,22 @@ padding-bottom: 15px;
 
 
 @media screen and (max-width:1016px) {
-    /* .container_ourvalues{
-        height: 1080px;
-    } */
+    .container_ourvalues{
+        display: none;
+    }
+    .responsivecontainer_ourvalues{
+      
+        width: 100%;
+        height: 100%;
+        display: flex;
+        /* background-color: #F58634; */
+        flex-direction: column;
+        align-items: center;
+        gap: 60px;
+        /* justify-content: space-around; */
+        margin: auto;
+    }
+    
     .cards_ourvalues{
         width: 80%;
         height: 100%;
