--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,11 +1,13 @@
 .container_footer{
     display: flex;
     width: 100%;
-    height: 70vh;
+    height: 100%;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin: auto;
+    /* border: 1px solid brown; */
+    background-color: #F7F7FA;
 }
 .box_footer{
     display: flex;
@@ -15,12 +17,16 @@
 }
 .copyright_footer{
     padding-left: 80px;
+    background-color: burlywood;
+    width: 100%;
+    text-align: center;
+ 
 }
 @media screen and (max-width:670px) {
     .container_footer{
         height: 200px;
         font-size: 16px;
-        gap: 20px;
+        /* gap: 20px; */
         margin: 0;
     }
     .box_footer{
@@ -29,8 +35,11 @@
         justify-content: space-between;
         padding-left: 20px;
         gap: 20px;
+        background-color: #F7F7FA;
+
     }
     .copyright_footer{
+ 
         padding-left: 20px;
     }
 }
