--- a/src/Components/StartProject/Component/Project/Project.module.css
+++ b/src/Components/StartProject/Component/Project/Project.module.css
@@ -1,3 +1,32 @@
+
+
+
+.filenames_project {
+    margin-top: 10px;
+  }
+  
+  .filename_project {
+    font-size: 14px;
+    color: #db2323;
+    margin-top: 5px;
+  }
+  .fileupload_project {
+    background-color: #F6F6F6;
+    width: 640px;
+    height: 230px;
+    border: 1px dashed #000000;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    transition: background-color 0.3s ease;
+  }
+  
+  .fileupload_project.dragging {
+    background-color: #e0e0e0;
+  }
+
 .container_project{
     width: 97vw;
     height: 1200px;
@@ -56,7 +85,7 @@ border: 1px solid #F6F6F6;
 background-color: #F6F6F6;
 width: 300px;
 height: 50px;
-padding: 30px;
+padding: 20px;
 }
 
 .textelem_project{
@@ -74,7 +103,7 @@ padding: 30px;
     width: 640px;
     height: 100px;
     padding: 30px;
-     
+    resize: none; 
 
 }
 .fileupload_project{
