--- a/src/Components/Testimonial/Testimonial.module.css
+++ b/src/Components/Testimonial/Testimonial.module.css
@@ -1,18 +1,29 @@
 .main_container {
-    /* border: 2px dashed red; */
-    height: 450px;
-    width: 98vw;
+    /* border: 1px dashed red; */
+    height: 470px;
+    width: 100%;
     display: flex;
     align-items: center;
+    gap: 20px;
     flex-direction: column;
 }
 
 .heading {
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 .review {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-around; */
-    width: 98vw;
+    /* border: 1px saddlebrown solid; */
+    justify-content: space-around;
+    width: 100%;
+    height: 450px;
+}
+@media screen and (max-width:450px) {
+    .main_container {
+       height: 100%; 
+    }  
+    .review {
+        height: 100%;
+    }
 }
