--- a/src/Components/caroursel/Services/Component/Mainservice/Mainservice.module.css
+++ b/src/Components/caroursel/Services/Component/Mainservice/Mainservice.module.css
@@ -14,7 +14,7 @@
 .mainservice__img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: inherit;
     position: absolute;
 }
 .mainservice__text {
