--- a/src/Components/caroursel/Services/Component/Optimizing/Optimizing.module.css
+++ b/src/Components/caroursel/Services/Component/Optimizing/Optimizing.module.css
@@ -1,6 +1,12 @@
 
 
-.optimizing__container {
+
+
+
+
+
+
+ .optimizing__container {
    
     display: flex;
     gap: 0px;
@@ -12,7 +18,7 @@
    
 }
 .optimizing__left {
-width: 38%;
+width: 37%;
 margin-top: -4px;
 }
 .optimizing__heading {
@@ -68,6 +74,9 @@ margin-top: -4px;
        flex-direction: column;
        gap: 20px;
        padding: 10px 50px;
+
+       display: flex;
+       justify-content: center;
     }
     .optimizing__left {
         width: auto;
@@ -82,20 +91,11 @@ margin-top: -4px;
 
     }
     .optimizing__lines {
-         width: 70%;
+         /* width: 70%; */
          display: inline-block;
+
+         width: 60%;
+         margin-left: 22%;
+         
     }
-} 
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
