--- a/src/Components/AboutUs/AboutUsPage/Component/Choose/Choose.module.css
+++ b/src/Components/AboutUs/AboutUsPage/Component/Choose/Choose.module.css
@@ -247,6 +247,12 @@
       .choose__heading {
           font-size: 35px;
       }
+      .choose__description {
+        margin: 10px 0 0 -75px;
+      }
+      .choose_iconimg {
+        margin-top: -20px;
+      }
   
       .choose__icon {
           width: 120px;
@@ -268,6 +274,7 @@
           z-index: 1;
         }
   }
+   
 
   
   @media screen and (max-width: 566px) {
@@ -373,43 +380,37 @@
         .choose_iconimg {
           height: 88px;
         }
-  }
-
-  @media screen and (max-width: 400px) {
-    .choose_iconimg {
-      height: 50px;
-      margin-top: -23px;
-    }
-  }
-  @media screen and (max-width: 380px) {
-    .choose_iconimg {
-      height: 50px;
-      margin-top: -27px;
-    }
+        .choose__box:nth-child(2) .choose__icon img {
+          height: 42px;
+          margin-top: -12%;
+        }
+        .choose__box:nth-child(4) .choose__icon img {
+          height: 50px;
+          margin-top: -9%;
+        }
   }
   
-  @media screen and (max-width: 370px) {
+  @media screen and (max-width: 400px) {
 
     .choose__box{
       width: 85%;
-      /* height: 170px; */
     }
 
     .choose_iconimg {
       height: 45px;
-      margin-top: -5px;
+      margin-top: 0%;
     }
     .choose__description {
       margin: 10px 0 0 -75px;
     }
      
     .choose__box:nth-child(2) .choose__icon img {
-      height: 40px;
-      margin-top: -18px;
+      height: 36px;
+      margin-top: -12%;
     }
     .choose__box:nth-child(4) .choose__icon img {
       height: 40px;
-      margin-top: -20px;
+      margin-top: -12%;
     }
     .choose__box:nth-child(5) .choose__icon img {
       height: 38px;
@@ -419,6 +420,13 @@
       height: 38px;
     }
 
+  }
 
-
+  @media screen and (max-width: 340px) {
+    .choose__box:nth-child(2) .choose__icon img {
+      margin-top: -24%;
+    }
+    .choose__box:nth-child(5) .choose__icon img {
+      margin-top: -15px;
+    }
   }
